# desk_controller

./: .env.sample  .gitignore  Makefile  README.md  emulate.py  main.py  pyproject.toml
controller/: controller.py
kvm/: __init__.py  app.py  client.py  ui.py
lights/: __init__.py  app.py  client.py  ui.py
menu/: __init__.py  app.py  ui.py
pibeam/: main.py
player/: __init__.py  app.py  client.py  ui.py
shared/: __init__.py  app.py  coordinates.py  runner.py  ui.py
v2/: .env.sample  emulate.go  go.mod  go.sum
v2/controller/: controller.go
v2/kvm/: app.go  client.go  client_darwin.go  ui.go
v2/lights/: app.go  client.go  models.go  ui.go
v2/menu/: app.go  ui.go
v2/player/: app.go  client.go  env.go  models.go  ui.go
v2/shared/: app.go  coordinates.go  pool.go  runner.go  ui.go
waveshare/: __init__.py  epd2in13_V4.py  epdconfig.py  gt1151.py
